--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html,body,#mapDiv,.map.container{
   padding:0;
   margin:0;
   height:100%;
+  width: 100%;
 }
 
 #legendDiv{
@@ -12,6 +13,14 @@ html,body,#mapDiv,.map.container{
   right:20px;
 }
 
+#search {
+  display: block;
+  position: absolute;
+  z-index: 3;
+  top: 20px;
+  left: 75px;
+}
+
 .borderContainer {
   width:100%;
   height:100%;
@@ -19,4 +28,23 @@ html,body,#mapDiv,.map.container{
 
 .contentContainer {
   width: 250px;
+}
+
+.spotlight {
+  z-index:-1;
+  position:absolute;
+  left:50%;
+  top:50%;
+  border-radius:50%;
+  opacity:0;
+  box-shadow:
+    inset rgba(0,0,0,0.25) 0px 0px 20px 20px,
+    rgba(0,0,0,0.25) 0px 0px 0px 1000px;
+  transition:all 1000ms;
+  -moz-transition:all 1000ms;
+  -webkit-transition:all 1000ms;
+}
+.spotlight-active {
+  z-index:2;
+  opacity:1;
 }
